# FastAPI---Login

./: README.md  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py  test.db
routers/: auth_routes.py
templates/: home.html  login.html  signup.html
